fix bug that misCalculate reset day term.

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ dependencies {
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	//배치 테스트를 위한 H2 Database
+	testImplementation 'com.h2database:h2'
 }
 
 tasks.named('test') {
