--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Deploy to EC2 via SSH
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: ${{ secrets.EC2_HOST }}  # EC2 호스트
+          host: ${{ secrets.EC2_HOST }}  # EC2 호스트.
           username: ${{ secrets.EC2_USER }}  # EC2 사용자
           key: ${{ secrets.EC2_PRIVATE_KEY }}  # SSH 개인 키
           script: |
