--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,11 @@ spring:
     password: ${{ secrets.DATASOURCE_PASSWORD }}
     driver-class-name: com.mysql.cj.jdbc.Driver
 
+#    url: jdbc:mysql://localhost:3306/greaticker?allowPublicKeyRetrieval=true&useSSL=false
+#    username: sseung00921
+#    password: 1234
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+
   sql:
     init:
       mode: embedded
