--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,6 +18,7 @@ spring:
     properties:
       hibernate:
         format_sql: true  # SQL 쿼리를 보기 쉽게 포맷
+        show_sql: true
         use_sql_comments: true  # 쿼리 주석도 출력 (선택 사항)
 
 
@@ -26,9 +27,9 @@ spring:
       initialize-schema: always
 
 logging:
-  level:
-    org.hibernate.SQL: DEBUG  # SQL 쿼리 로깅 레벨 설정
-    org.hibernate.type.descriptor.sql.BasicBinder: TRACE  # 바인딩된 파라미터도 로깅
+  level.org.hibernate:
+    SQL: DEBUG
+    orm.jdbc.bind: TRACE
 
 #  kafka:
 #    bootstrap-servers: kafka:9092  # Kafka ?? ??
